refatoramento do codigo para programação funcional, correções de bugs, adição de css, remoção e adição de elementos html, e enfim, acho que tá pronto!😀

--- a/index.html
+++ b/index.html
@@ -2,27 +2,31 @@
 <html lang="pt-BR">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My timer app</title>
-    
-    <link rel="shortcut icon" href="./assets/img/clock.png" type="image/x-icon">
-    <link rel="stylesheet" href="./assets/css/style.css">
-    <script defer src="./assets/js/main.js"></script>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ 
+  <title>Timer App</title>
+
+  <link rel="shortcut icon" href="./assets/img/clock.png" type="image/x-icon">
+  <link rel="stylesheet" href="./assets/css/style.css">
+  
+  <script defer src="./assets/js/main.js"></script>
 </head>
 
 <body>
-    <section class="container">
-        <h1 class="title">Meu timer</h1>
-        <p class="clock">00:00:00</p>
-        <p>
-            <button class="click iniciar">iniciar</button>
-            <button class="click pausar">pausar</button>
-            <button class="click zerar">zerar</button>
-        </p>
-    </section>
-    <a class="me" href="https://github.com/elo1lson">By Elo1lson</a>
+  <section class="container">
+    <div class="top">
+      <img src="./assets/img/clock.png" alt="clock">
+      <p class="clock">00:00:00</p>
+    </div>
+
+    <button class="click iniciar">iniciar</button>
+    <button class="click pausar">pausar</button>
+    <button class="click zerar">zerar</button>
+    </p>
+  </section>
+  <a class="me" href="https://github.com/elo1lson">By Elo1lson</a>
 </body>
 
 </html>
